<resources>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="status_in_progress">This session is in progress</string>
    <string name="status_over">This session is over</string>
    <string name="action_schedule">Schedule</string>
    <string name="action_speakers">Speakers</string>
    <string name="action_location">Location</string>
    <string name="action_info">Info</string>

    <string name="session_time">%1$s\nto\n%2$s</string>
    <string name="session_detail_time">%1$s, %2$s - %3$s</string>

    <!-- Licensing -->
    <string name="google_maps">Google Maps</string>
    <string name="glide">Glide</string>
    <string name="info_topper">Brought to you with the help of these Open Source projects</string>
    <string name="feedback_title">How would you rate this session?</string>
    <string name="feedback_session">Overall session experience:</string>
    <string name="feedback_content">Technical level of the session content:</string>
    <string name="feedback_speaker">Presentation skills of the speaker:</string>
    <string name="cancel">cancel</string>
    <string name="submit">Submit</string>
    <string name="cd_logo">Event Logo</string>
    <string name="note_feedback_title">%1$s complete</string>
    <string name="note_feedback_msg">Don\'t forget to submit feedback.</string>
    <string name="feedback_note_channel">Session Feedback</string>
    <string name="not_enough">Not\nenough</string>
    <string name="just_right">Just\nright</string>
    <string name="too_much">Too\nmuch</string>
</resources>
